ajout de la ligne de création de documentation dans le script de lancement et de compilation et ajout de la nouvelle documentation de tout le code